Adapt to luajava API changes